--- a/.npmignore
+++ b/.npmignore
@@ -21,3 +21,9 @@ coverage/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# Exclude specific files but keep CSS and config
+!src/index.css
+!tailwind.config.js
+!postcss.config.js
+!src/config/shadcn.js
